--- a/06_Paper/COG-ED/Manuscript.Rmd
+++ b/06_Paper/COG-ED/Manuscript.Rmd
@@ -474,6 +474,7 @@ Regarding the associations of subjective and objective task load we hypothesize 
 Regarding the associations of task load and ED we hypothesize that (2a) SVs decline with increasing n-back level, and (2b) they do so even after controlling for declining task performance.
 Here we added the hypothesis that (2c) SVs decline stronger with increasing task load for individuals with low compared to high NFC scores.
 And regarding individual differences in ED we hypothesize that (3a) SVs predict individual NFC scores, and (3b) perceived task load does not predict individual NFC scores.
+Each hypothesis is detailed in the Design Table in the Appendix.
 
 ```{r preprocessing, echo=FALSE, message=FALSE, warning=FALSE}
 
@@ -1852,7 +1853,7 @@ Study data will be collected and managed using REDCap electronic data capture to
 
 ## Sampling plan
 
-A sample size analysis with _G*Power_ [@Faul2007; @Faul2009], based on the results of the ANOVA of Westbrook et al. [-@Westbrook2013] which showed an increase in reaction time with higher n-back levels, indicated that we should collect data from at least 53 participants, assuming $\eta2=0.04$, $\alpha=.05$, and $\beta=.95$.
+A sample size analysis with *G\*Power* [@Faul2007; @Faul2009], based on the results of the ANOVA of Westbrook et al. [-@Westbrook2013] which showed an increase in reaction time with higher n-back levels, indicated that we should collect data from at least 53 participants, assuming $\eta2=0.04$, $\alpha=.05$, and $\beta=.95$.
 The power analyses of all other hypotheses yielded smaller necessary sample sizes.
 To account for technical errors and exclusions of physiological data of the second lab session due to excessive noise, we aim to collect data of 60 to 70 participants.
 
